LightAPI: bukkit-common: large upstream to 2020
Change-Id: I907246c994524e588734ea4dae12a8c8094e74dd